[gd_scene load_steps=36 format=3 uid="uid://b40oaetqwyltx"]

[ext_resource type="Script" path="res://SCRIPTS/pirate.gd" id="1_226mg"]
[ext_resource type="Resource" uid="uid://bj15kx4oohkq5" path="res://Custom Resources/Morale Modifiers/attack_modifier.tres" id="2_i0crg"]
[ext_resource type="SpriteFrames" uid="uid://da2vxfmidmm5s" path="res://Custom Resources/saw_pirate_sprite_frames.tres" id="3_jqkd6"]
[ext_resource type="Material" uid="uid://cf3tuv5aidq14" path="res://Materials/highlight_material.tres" id="3_jwnii"]
[ext_resource type="SpriteFrames" uid="uid://d08fqlykkmdl6" path="res://Custom Resources/basic_pirate_sprite_frames.tres" id="4_m7fne"]
[ext_resource type="SpriteFrames" uid="uid://c7fbmx4sog75q" path="res://Custom Resources/hammer_pirate_sprite_frames.tres" id="4_nsorq"]
[ext_resource type="AudioStream" uid="uid://dsl2r5ouyucqa" path="res://Audio/hail_grunt.mp3" id="14_bmk4o"]
[ext_resource type="AudioStream" uid="uid://djsabwgbhue80" path="res://Audio/assign_grunt.mp3" id="15_705hw"]
[ext_resource type="AudioStream" uid="uid://bmnryvntjoscm" path="res://Audio/Pirate/fight_sound.ogg" id="17_v420o"]
[ext_resource type="AudioStream" uid="uid://n0l7avdqv44i" path="res://Audio/Pirate/demoralized.ogg" id="18_sljar"]
[ext_resource type="AudioStream" uid="uid://bw0dytcnoie43" path="res://Audio/Pirate/splash.ogg" id="19_0jdhr"]
[ext_resource type="AudioStream" uid="uid://bjsitw371kru0" path="res://Audio/Pirate/jump.ogg" id="20_668g4"]
[ext_resource type="Texture2D" uid="uid://bg5dpnbshij7x" path="res://Art/Ocean/Ocean/PirateSplash/PirateSplashA.png" id="48_28fwu"]
[ext_resource type="Texture2D" uid="uid://bpcikrqj0h7c0" path="res://Art/Ocean/Ocean/PirateSplash/PirateSplashB.png" id="49_iwijb"]
[ext_resource type="Texture2D" uid="uid://bma5l7cbhb5dy" path="res://Art/Ocean/Ocean/PirateSplash/PirateSplashC.png" id="50_weklw"]
[ext_resource type="Texture2D" uid="uid://cyfcmhitqhs41" path="res://Art/Ocean/Ocean/PirateSplash/PirateSplashD.png" id="51_cb8dy"]
[ext_resource type="Texture2D" uid="uid://b4y0meghyt822" path="res://Art/Ocean/Ocean/PirateSplash/PirateSplashE.png" id="52_eku7n"]
[ext_resource type="Texture2D" uid="uid://cej8143kh218e" path="res://Art/Ocean/Ocean/PirateSplash/PirateSplashF.png" id="53_l7ces"]
[ext_resource type="PackedScene" uid="uid://dbwv6ry1wdjpo" path="res://SCENES/sfx_manager.tscn" id="55_1ky26"]
[ext_resource type="AudioStream" uid="uid://c4wwmhh1pltjm" path="res://Audio/boot_step2.mp3" id="58_wp6ys"]
[ext_resource type="PackedScene" uid="uid://cctlxmjryldte" path="res://SCENES/morale_bar.tscn" id="67_lunvm"]

[sub_resource type="Curve" id="Curve_hivc8"]
max_value = 50.0
_data = [Vector2(0, 0), 0.0, 100.0, 0, 0, Vector2(0.5, 50), 0.0, 0.0, 0, 0, Vector2(1, 0), -100.0, 100.0, 0, 0]
point_count = 3

[sub_resource type="SpriteFrames" id="SpriteFrames_wnkih"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("48_28fwu")
}, {
"duration": 1.0,
"texture": ExtResource("49_iwijb")
}, {
"duration": 1.0,
"texture": ExtResource("50_weklw")
}, {
"duration": 1.0,
"texture": ExtResource("51_cb8dy")
}, {
"duration": 1.0,
"texture": ExtResource("52_eku7n")
}, {
"duration": 1.0,
"texture": ExtResource("53_l7ces")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"splash",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ojju"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j4hgd"]
radius = 19.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d47by"]
random_pitch = 1.1
streams_count = 2
stream_0/stream = ExtResource("14_bmk4o")
stream_1/stream = ExtResource("15_705hw")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xukui"]
random_pitch = 1.02
streams_count = 1
stream_0/stream = ExtResource("17_v420o")

[sub_resource type="Animation" id="Animation_bm4pa"]
resource_name = "new_animation"
length = 0.0333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_u6o6e"]
resource_name = "fight"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fight_L"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFXManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["FightNoise"],
"method": &"play"
}, {
"args": ["FightNoise"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_df2kf"]
resource_name = "idle_down"
length = 0.250025
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yrpeu"]
resource_name = "idle_up"
length = 0.250025
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pljt4"]
resource_name = "jump"
length = 0.500025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump_R"]
}

[sub_resource type="Animation" id="Animation_2fgx1"]
resource_name = "walking_down"
length = 0.500025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walking_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFXManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["BootStepHigh"],
"method": &"play"
}, {
"args": ["BootStepLow"],
"method": &"play"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_x2nhf"]
resource_name = "walking_up"
length = 0.500025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walking_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFXManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["BootStepHigh"],
"method": &"play"
}, {
"args": ["BootStepLow"],
"method": &"play"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_plwr3"]
_data = {
"RESET": SubResource("Animation_bm4pa"),
"fight": SubResource("Animation_u6o6e"),
"idle_down": SubResource("Animation_df2kf"),
"idle_up": SubResource("Animation_yrpeu"),
"jump": SubResource("Animation_pljt4"),
"walking_down": SubResource("Animation_2fgx1"),
"walking_up": SubResource("Animation_x2nhf")
}

[node name="Pirate" type="CharacterBody2D" node_paths=PackedStringArray("sprite_container", "sfx_manager", "sprite")]
z_index = 1
collision_layer = 64
collision_mask = 9
motion_mode = 1
script = ExtResource("1_226mg")
defeated_color = Color(1, 0, 0, 1)
sprite_container = NodePath("Sprites")
sprite_frame_sets = Array[SpriteFrames]([ExtResource("4_m7fne"), ExtResource("3_jqkd6"), ExtResource("4_nsorq")])
jump_curve = SubResource("Curve_hivc8")
sfx_manager = NodePath("SFXManager")
sprite = NodePath("Sprites/Sprite")
speed = 75.0
attack_morale_modifier = ExtResource("2_i0crg")

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite" type="AnimatedSprite2D" parent="Sprites"]
material = ExtResource("3_jwnii")
position = Vector2(0, -7)
sprite_frames = ExtResource("4_m7fne")
animation = &"idle_down"
autoplay = "idle_up"

[node name="Splash" type="AnimatedSprite2D" parent="Sprites"]
visible = false
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_wnkih")
animation = &"splash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1ojju")
disabled = true

[node name="InteractableRange" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 39

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableRange"]
shape = SubResource("CircleShape2D_j4hgd")

[node name="SFXManager" parent="." instance=ExtResource("55_1ky26")]

[node name="BootStepHigh" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("58_wp6ys")
pitch_scale = 1.6

[node name="BootStepLow" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("58_wp6ys")
pitch_scale = 1.4

[node name="AmbientNoise" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = SubResource("AudioStreamRandomizer_d47by")
volume_db = -8.0
pitch_scale = 0.7

[node name="FightNoise" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = SubResource("AudioStreamRandomizer_xukui")

[node name="Demoralized" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("18_sljar")
volume_db = 10.0
pitch_scale = 0.8

[node name="Splash" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("19_0jdhr")
volume_db = 5.0
attenuation = 0.196146

[node name="Jump" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("20_668g4")
volume_db = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_plwr3")
}
autoplay = "RESET"

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AmbientNoiseTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="MoraleBar" parent="." instance=ExtResource("67_lunvm")]

[connection signal="body_entered" from="InteractableRange" to="." method="_on_interactable_range_body_entered"]
[connection signal="body_exited" from="InteractableRange" to="." method="_on_interactable_range_body_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="AmbientNoiseTimer" to="." method="_on_ambient_noise_timer_timeout"]
